--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "quasar": "^2.0.0",
+    "serve-static": "^1.14.2",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
